# MidiRun

./: README.md  create_udev_rule.sh  meson.build  midirun.service
data/udev/: 99-uinput.rules
include/: deamon.hpp  log.hpp  signal_state.hpp
src/: deamon.cpp  main.cpp  signal_state.cpp
